changed bytes reading according to java 8